# coBridge

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README-cn.md  README.md  README.zh-CN.md  ROS1.Dockerfile  ROS2.Dockerfile  nodelets.xml  package.xml  ros1_entry.sh  ros2_entry.sh
.devcontainer/: devcontainer.yaml
.github/workflows/: build-and-test.yaml  build-image.yaml  ci.yaml  cobridge_comile.yaml  lint.yaml
cobridge subprotocol/: coBridge Websocket SubProtocol.md
cobridge_base/include/: base64.hpp  callback_queue.hpp  cobridge.hpp  common.hpp  message_definition_cache.hpp  parameter.hpp  regex_utils.hpp  serialization.hpp  server_factory.hpp  server_interface.hpp  websocket_client.hpp  websocket_logging.hpp  websocket_notls.hpp  websocket_server.hpp  websocket_tls.hpp
cobridge_base/include/test/: test_client.hpp
cobridge_base/src/: base64.cpp  cobridge.cpp  cos_bridge.cpp  parameter.cpp  serialization.cpp  server_factory.cpp  version.cpp.in
cobridge_base/src/test/: test_client.cpp
cobridge_base/tests/: base64_test.cpp  serialization_test.cpp  version_test.cpp
cos_bridge_base/include/: base64.hpp  callback_queue.hpp  common.hpp  cos_bridge.hpp  message_definition_cache.hpp  parameter.hpp  regex_utils.hpp  serialization.hpp  server_factory.hpp  server_interface.hpp  websocket_logging.hpp  websocket_notls.hpp  websocket_server.hpp  websocket_tls.hpp
cos_bridge_base/src/: base64.cpp  cos_bridge.cpp  parameter.cpp  serialization.cpp  server_factory.cpp  version.cpp.in
docker_files/: foxy.Dockerfile  humble.Dockerfile  noetic.Dockerfile
ros1_bridge/include/: generic_service.hpp  param_utils.hpp  service_utils.hpp
ros1_bridge/launch/: cobridge.launch  cos_bridge.launch
ros1_bridge/src/: param_utils.cpp  ros1_bridge_node.cpp  ros1_bridge_nodelet.cpp  service_utils.cpp
ros1_bridge/tests/: smoke.test  smoke_test.cpp  smoke_test.xml
ros2_bridge/: Dockerfile
ros2_bridge/include/: create_generic_publisher.hpp  create_generic_subscription.hpp  generic_client.hpp  generic_publisher.hpp  generic_subscription.hpp  param_utils.hpp  parameter_interface.hpp  ros2_bridge.hpp  typesupport_helpers.hpp  utils.hpp
ros2_bridge/launch/: cobridge_launch.xml  cos-bridge_launch.xml
ros2_bridge/src/: generic_client.cpp  generic_publisher.cpp  generic_subscription.cpp  message_definition_cache.cpp  param_utils.cpp  parameter_interface.cpp  ros2_bridge.cpp  ros2_bridge_node.cpp  typesupport_helpers.cpp
ros2_bridge/tests/: smoke_test.cpp
scripts/: formant.py
