<?xml version="1.0"?>
<package format="3">
    <name>cos-bridge</name>
    <version>0.0.1</version>
    <description>bridge for ROS2</description>
    <maintainer email="coscene@coscene.io">coscene</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>ament_index_cpp</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>resource_retriever</depend>
    <depend>rosgraph_msgs</depend>
    <!--    <depend>sensor_msgs</depend>-->

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>std_msgs</test_depend>
    <test_depend>std_srvs</test_depend>

    <build_depend>asio</build_depend>
    <build_depend>libssl-dev</build_depend>
    <build_depend>libwebsocketpp-dev</build_depend>
    <build_depend>nlohmann-json-dev</build_depend>
    <!--    <build_depend>cv_bridge</build_depend>-->
    <build_depend>ros_environment</build_depend>
    <build_depend>zlib</build_depend>

    <exec_depend>openssl</exec_depend>
    <exec_depend>zlib</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
