<?xml version="1.0"?>
<package format="3">
    <name>cos-bridge</name>
    <version>0.0.1</version>
    <description>bridge for ROS2</description>
    <maintainer email="coscene@coscene.io">coscene</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend condition="$ROS_VERSION == 1">nodelet</depend>
    <depend condition="$ROS_VERSION == 1">ros_babel_fish</depend>
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">roslib</depend>

    <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>


    <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
    <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>
    <test_depend condition="$ROS_VERSION == 1">rosunit</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
    <test_depend>std_msgs</test_depend>
    <test_depend>std_srvs</test_depend>

    <build_depend>asio</build_depend>
    <build_depend>libssl-dev</build_depend>
    <build_depend>libwebsocketpp-dev</build_depend>
    <build_depend>nlohmann-json-dev</build_depend>
    <!--    <build_depend>cv_bridge</build_depend>-->
    <build_depend>ros_environment</build_depend>
    <build_depend>zlib</build_depend>
    <exec_depend>openssl</exec_depend>
    <exec_depend>zlib</exec_depend>
    <depend>resource_retriever</depend>
    <depend>rosgraph_msgs</depend>

    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
        <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelets.xml" />
    </export>
</package>
